--- a/{{cookiecutter.project_slug}}/.travis.yml
+++ b/{{cookiecutter.project_slug}}/.travis.yml
@@ -1,31 +1,42 @@
-# Config file for automatic testing at travis-ci.org
-
 language: python
+os: linux
 python:
+  - 3.8
+  - 3.7
   - 3.6
   - 3.5
-  - 3.4
-  - 2.7
 
-# Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -U tox-travis
-
-# Command to run tests, e.g. python setup.py test
 script: tox
 
-{% if cookiecutter.use_pypi_deployment_with_travis == 'y' -%}
-# Assuming you have installed the travis-ci CLI tool, after you
-# create the Github repo and add it to Travis, run the
-# following command to finish PyPI deployment setup:
-# $ travis encrypt --add deploy.password
-deploy:
-  provider: pypi
-  distributions: sdist bdist_wheel
-  user: {{ cookiecutter.pypi_username }}
-  password:
-    secure: PLEASE_REPLACE_ME
-  on:
-    tags: true
-    repo: {{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
+jobs:
+  include:
+  - stage: deploy pages
+    script: invoke docs && touch docs/build/html/.nojekyll
+    before_script:
+    - pipenv install --dev --skip-lock
     python: 3.6
-{%- endif %}
+    deploy:
+      provider: pages
+      local_dir: docs/build/html
+      skip_cleanup: true
+      # Generate a GitHub access token for public repositories
+      # In your travis ci settings, set the token as a secret environment variable $GH_TOKEN
+      token: "$GH_TOKEN"
+      keep_history: true
+      on:
+        branch: master
+  - stage: deploy pypi
+    script: pip install -e .
+    python: 3.6
+    deploy:
+      provider: pypi
+      username: __token__
+      skip_cleanup: true
+      password:
+        secure: REPLACE_ME
+      on:
+        tags: true
+        python: 3.6
+after_success:
+  - coveralls
