--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -1,13 +1,12 @@
 [tox]
-envlist = py27, py34, py35, py36, py37, lint, format
+envlist = py35, py36, py37, py38, lint, format, typecheck
 
 [travis]
 python =
+    3.8: py38
     3.7: py37
     3.6: py36
     3.5: py35
-    3.4: py34
-    2.7: py27
 
 [testenv:lint]
 basepython = python
@@ -17,12 +16,15 @@ commands = invoke lint
 basepython = python
 commands = invoke format --check
 
+[testenv:typecheck]
+basepython = python
+commands = invoke type-check
+
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
     pipenv
-    {py27}: pathlib2
 ; If you want to make tox run the tests with the same versions, commit
 ; the Pipfile.lock to source control and remove the --skip-lock below
 commands_pre = pipenv install --dev --skip-lock
