Use locked dependencies for testing

--- a/tox.ini
+++ b/tox.ini
@@ -18,5 +18,5 @@ setenv =
     PYTHONPATH = {toxinidir}
 deps =
     pipenv
-commands_pre = pipenv install --dev --skip-lock
+commands_pre = pipenv install --dev
 commands = pipenv run invoke test
