Add pre-commit dependency

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ pytest-xdist = "*"
 pytest-sugar = "*"
 sphinx = ">=2.0"
 pyyaml = "*"
+pre-commit = "*"
 romnnn_sphinx_press_theme = "*"
 
 [packages]
