Use pipenv run for invoking commands

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,14 @@ python =
 basepython=python
 commands= pipenv run invoke docs
 
+[testenv:codecov]
+passenv = CI TRAVIS TRAVIS_* CODECOV_TOKEN
+basepython = python
+deps =
+    pipenv
+    codecov
+commands_post = pipenv run codecov
+
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
