--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -9,24 +9,30 @@ python =
 
 [testenv:lint]
 basepython = python
-commands = invoke lint
+commands = pipenv run invoke lint
 
 [testenv:format]
 basepython = python
-commands = invoke format --check
+commands = pipenv run invoke format --check
 
 [testenv:typecheck]
 basepython = python
-commands = invoke type-check
+commands = pipenv run invoke type-check
+
+[testenv:codecov]
+passenv = CI TRAVIS TRAVIS_* CODECOV_TOKEN
+basepython = python
+deps =
+    pipenv
+    codecov
+commands_post = pipenv run codecov
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
     pipenv
-; If you want to make tox run the tests with the same versions, commit
-; the Pipfile.lock to source control and remove the --skip-lock below
-commands_pre = pipenv install --dev --skip-lock
-commands = invoke test
+commands_pre = pipenv install --dev
+commands = pipenv run invoke test
 
 
