Run codecov as a separate stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ python:
   - 3.7
   - 3.6
 
-install: pip install -U tox-travis codecov
+install: pip install -U tox-travis
 
-script: tox -e py36, py37, py38, pypy, docs, codecov
+script: tox
 
 jobs:
   include:
@@ -25,3 +25,7 @@ jobs:
       keep_history: true
       on:
         branch: master
+  - stage: codecov
+    install: pip install -U tox-travis
+    script: tox -e codecov
+    python: 3.6
