Omit tests and virtual environment files in coverage report

--- a/{{cookiecutter.project_slug}}/.coveragerc
+++ b/{{cookiecutter.project_slug}}/.coveragerc
@@ -1,5 +1,10 @@
 [run]
 source = {{cookiecutter.project_slug}}
+omit =
+    .tox
+    tests
+    tasks.py
+    setup.py
 
 [report]
 exclude_lines =
