--- a/{{cookiecutter.project_slug}}/Pipfile
+++ b/{{cookiecutter.project_slug}}/Pipfile
@@ -18,6 +18,8 @@ pytest = "*"
 pytest-cov = "*"
 pytest-xdist = "*"
 pytest-sugar = "*"
+oyaml = "*"
+pyfakefs = "*"
 mypy = "*"
 # Coverage
 coverage = "*"
@@ -25,6 +27,7 @@ codecov = "*"
 # Tools
 pre-commit = "*"
 invoke = "*"
+pyyaml = "*"
 m2r = "*"
 twine = "*"
 bump2version = "*"
