--- a/{{cookiecutter.project_slug}}/.travis.yml
+++ b/{{cookiecutter.project_slug}}/.travis.yml
@@ -1,14 +1,22 @@
 language: python
 os: linux
-python:
-  - 3.8
-  - 3.7
-  - 3.6
-install: pip install -U tox-travis
-script: tox
 jobs:
   include:
-  - stage: deploy pages
+  - stage: test
+    name: "Unit tests"
+    install: pip install -U tox-travis
+    script: tox
+    python:
+    - 3.8
+    - 3.7
+    - 3.6
+  - stage: test
+    name: "Measure code coverage"
+    install: pip install -U tox-travis
+    script: tox -e codecov
+    python: 3.6
+  - stage: deploy
+    name: "Deploy to GitHub Pages"
     script: invoke docs && touch docs/build/html/.nojekyll
     before_script:
     - pipenv install --dev --skip-lock
@@ -23,7 +31,8 @@ jobs:
       keep_history: true
       on:
         branch: master
-  - stage: deploy pypi
+  - stage: deploy
+    name: "Deploy to PyPI"
     script: pip install -e .
     python: 3.6
     deploy:
@@ -35,7 +44,3 @@ jobs:
       on:
         tags: true
         python: 3.6
-  - stage: codecov
-    install: pip install -U tox-travis
-    script: tox -e codecov
-    python: 3.6
