Move unittests from staging to top level

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,21 @@
 language: python
+os: linux
+
+install: pip install -U tox-travis
+script: tox
+python:
+- 3.8
+- 3.7
+- 3.6
+
 jobs:
   include:
-  - stage: test
-    name: "Unit tests"
-    install: pip install -U tox-travis
-    script: tox
-    python:
-    - 3.8
-    - 3.7
-    - 3.6
   - stage: test
     name: "Measure code coverage"
     install: pip install -U tox-travis
     script: tox -e codecov
     python: 3.6
+
   - stage: deploy
     name: "Deploy to GitHub Pages"
     script: invoke docs && touch docs/build/.nojekyll
