--- a/{{cookiecutter.project_slug}}/.travis.yml
+++ b/{{cookiecutter.project_slug}}/.travis.yml
@@ -1,29 +1,30 @@
 language: python
 os: linux
+
+install: pip install -U tox-travis
+script: tox
+python:
+- 3.8
+- 3.7
+- 3.6
+
 jobs:
   include:
-  - stage: test
-    name: "Unit tests"
-    install: pip install -U tox-travis
-    script: tox
-    python:
-    - 3.8
-    - 3.7
-    - 3.6
   - stage: test
     name: "Measure code coverage"
     install: pip install -U tox-travis
     script: tox -e codecov
     python: 3.6
+
   - stage: deploy
     name: "Deploy to GitHub Pages"
-    script: invoke docs && touch docs/build/html/.nojekyll
+    script: invoke docs && touch docs/build/.nojekyll
     before_script:
     - pipenv install --dev --skip-lock
     python: 3.6
     deploy:
       provider: pages
-      local_dir: docs/build/html
+      local_dir: docs/build
       skip_cleanup: true
       # Generate a GitHub access token for public repositories
       # In your travis ci settings, set the token as a secret environment variable $GH_TOKEN
@@ -31,6 +32,7 @@ jobs:
       keep_history: true
       on:
         branch: master
+
   - stage: deploy
     name: "Deploy to PyPI"
     script: pip install -e .
