Use yaml implementation by ruamel

--- a/{{cookiecutter.project_slug}}/Pipfile
+++ b/{{cookiecutter.project_slug}}/Pipfile
@@ -18,7 +18,6 @@ pytest = "*"
 pytest-cov = "*"
 pytest-xdist = "*"
 pytest-sugar = "*"
-oyaml = "*"
 pyfakefs = "*"
 mypy = "*"
 # Coverage
@@ -27,7 +26,7 @@ codecov = "*"
 # Tools
 pre-commit = "*"
 invoke = "*"
-pyyaml = "*"
+"ruamel.yaml" = "*"
 m2r = "*"
 twine = "*"
 bump2version = "*"
