--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,6 @@ pytest-cov = "*"
 pytest-cookies = "*"
 pytest-xdist = "*"
 pytest-sugar = "*"
-oyaml = "*"
 # pyfakefs = "*"
 # Coverage
 coverage = "*"
@@ -21,6 +20,7 @@ sphinx = ">=2.0"
 romnnn_sphinx_press_theme = "*"
 sphinxemoji = "*"
 # Tools
+"ruamel.yaml" = "*"
 invoke = "*"
 pre-commit = "*"
 cookiecutter = "*"
