--- a/setup.cfg
+++ b/setup.cfg
@@ -7,8 +7,8 @@ tag = True
 description-file = README.rst
 
 [bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
+search = version \= "{current_version}"
+replace = {new_version}
 
 [tool:pytest]
 addopts=-n0
