Disable caching with pip and pepenv

--- a/tox.ini
+++ b/tox.ini
@@ -25,5 +25,5 @@ setenv =
     PYTHONPATH = {toxinidir}
 deps =
     pipenv
-commands_pre = pipenv install --dev
+commands_pre = pipenv install --clear --dev
 commands = pipenv run invoke test
