--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -32,7 +32,7 @@ setenv =
     PYTHONPATH = {toxinidir}
 deps =
     pipenv
-commands_pre = pipenv install --dev
+commands_pre = pipenv install --clear --dev
 commands = pipenv run invoke test
 
 
