--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 os: linux
 
-install: pip install -U tox-travis
+install: pip install --no-cache-dir -U tox-travis
 script: tox
 python:
 - 3.8
@@ -12,7 +12,7 @@ jobs:
   include:
   - stage: test
     name: "Measure code coverage"
-    install: pip install -U tox-travis
+    install: pip install --no-cache-dir -U tox-travis
     script: tox -e codecov
     python: 3.6
 
@@ -20,7 +20,7 @@ jobs:
     name: "Deploy to GitHub Pages"
     script: invoke docs && touch docs/build/.nojekyll
     before_script:
-    - pipenv install --dev --skip-lock
+    - pipenv install --clear --dev --skip-lock
     python: 3.6
     deploy:
       provider: pages
